@@ -16,3 +16,4 @@ David Bryson <mutex@gentoo.org>
 Daniel Ostrow <dostrow@gentoo.org>
 Matsuu Takuto <matsuu@gentoo.org>
 Joshua Kinard <kumba@gentoo.org>
+Lars Weiler <pylon@gentoo.org>
